fixed view history
save to local storage and display arrays of items, added scrollbar to history, change input max to 20, fixed the design.

--- a/Password Generator/styles.css
+++ b/Password Generator/styles.css
@@ -130,6 +130,22 @@ button[type='submit']:hover{
 .btn-copy:hover img{
     transform: scale(0.8);
 }
+.popup{
+    display: flex;
+    justify-content: center;
+}
+#textArea{
+    list-style-type: none;
+    padding: 0 2rem;
+    margin: 0;
+}
+#textArea li{
+    text-align: left;
+    margin-bottom: 1rem;
+}
+#textArea i{
+    margin-right: 1rem;
+}
 
 @media (max-width:600px){
     .container{
@@ -158,12 +174,11 @@ button[type='submit']:hover{
     transform: translate(-50%, -50%)scale(0);
     background: #1e2d3b;
     width: 450px;
-    height: 220px;
+    height: 270px;
     z-index: 2;
     text-align: center;
-    padding: 20px;
+    padding: 0;
     box-sizing: border-box;
-   
  }
 
  .popup .close-btn{
@@ -173,8 +188,8 @@ button[type='submit']:hover{
     top: 20px;
     width: 30x;
     height: 30px;
-    background: #222;
-    color: #fff;
+    color: #222;
+    /* color: #fff; */
     font-size: 30px;
     font-weight: 600;
     line-height: 30px;
@@ -209,3 +224,29 @@ button[type='submit']:hover{
     color: #fff;
     border: none;
 }
+.close-btn:hover{
+    color: #fff;
+}
+/* Style for the scrollbar track */
+::-webkit-scrollbar {
+    width: 10px; /* Set the width of the scrollbar */
+    margin-right: 100px;
+  }
+  
+  /* Style for the scrollbar handle (thumb) */
+  ::-webkit-scrollbar-thumb {
+    background-color: #3285f1; /* Set the color of the thumb */
+    border-radius: 5px; /* Set the border radius of the thumb */
+  }
+  
+  /* Style for the scrollbar track when being hovered */
+  ::-webkit-scrollbar-track:hover {
+    background-color: #222; /* Set the background color on hover */
+  }
+  
+  /* Style for the scrollbar handle when being hovered */
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #fff; /* Set the background color of the thumb on hover */
+  }
+ 
+  
